--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -35,6 +35,7 @@ html {
     font-size: 100%;
 }
 body {
+    background-color: rgba(58,23,63,1);
     font-family: 'Open Sans'; /* sets our font to the "Open Sans" typeface */
     color: white;             /* sets the text color to white */
     min-height: 100%;         /* says the height of the body must be, at minimum, 100% of the window */
