--- a/app/templates/collection.html
+++ b/app/templates/collection.html
@@ -7,7 +7,7 @@
                  <br/>
                  <a ui-sref="album">{{ album.artist }}</a>
                  <br/>
-                 {{ album.songs.length | timecode }} songs
+                 {{ album.songs.length }} songs
                  <br/>
              </p>
          </div>
